# Multi-Modal-Predictive-Maintenance-Agent

./: .dockerignore  .env.example  .gitignore  AI_USAGE.md  Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.streamlit  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml  requirements.txt
app/: config.py  main.py  schemas.py
app/api/: routes.py
app/core/: feature_node.py  fusion.py  manual_context_node.py  orchestrator.py  service_age_node.py  tools.py
app/core/nodes/: __init__.py  sensor_node.py
app/db/: migrate.py  models.py  session.py
app/models/: debug_model_direct.py  sensor_feature_columns.json  sensor_model.py
app/prompts/: __init__.py  templates.py
app/utils/: toon.py
data/transactional/: generate_dummy_transactional.py  maintenance_requests.csv  service_schedules.csv  work_done_logs.csv
frontend/: .env.example  app.py
notebooks/: train_sensor_model.ipynb
scripts/: create_match_manual_chunks.sql  ingestion.py  process_historical_baseline.py  sync_transactional_to_supabase.py
tests/: __init__.py  smoke_test_api.py  test_manual_context_extract.py  test_multimodal_integration.py  test_retrieval.py  test_sensor_stub_output.py
